Fix CSS overflow widget configuration (#6)

--- a/web_widget_field_selector/static/src/css/model_field_selector.less
+++ b/web_widget_field_selector/static/src/css/model_field_selector.less
@@ -1,3 +1,6 @@
+.table-responsive {
+    overflow: visible;
+}
 
 .o_field_selector {
     position: relative;
